# stenbug

./: Cargo.toml  README.md  build.rs
etc/: add-to-startup.bat
resources/: resources.rc
src/: app.rs  config.rs  main.rs
