[package]
name = "stenbug"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Simonov <asimonov6317@gmail.com>"]
description = "Simple wallpaper utility for Windows based on Wallhaven API"
documentation = "https://github.com/simalei/stenbug"
readme = "README.md"
homepage = "https://github.com/simalei/stenbug"
repository = "https://github.com/simalei/stenbug"
license = "MIT"
keywords = ["wallpaper", "windows"]


[dependencies]
etcetera = "0.8.0"
json = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["serde_derive"] }
tempfile = "3.14.0"
toml = "0.8.19"
tray-item = "0.10.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
embed-resource = "3.0.1"
